--- a/css/style.css
+++ b/css/style.css
@@ -10,71 +10,97 @@
     text-decoration: none;
 }
 
+/*Smooth transition Effect*/
+html{
+    scroll-behavior: smooth;
+}
+
+/*Text color's*/
+
+li{
+    list-style: none;
+}
+
+a{
+    text-decoration: none;
+    color: #fffdeb;
+}
+
+a:hover{
+    color: #ffe500;
+}
+
+/*Header*/
+header{
+    width: 100%;
+    position: fixed;
+    background: linear-gradient(rgba(0,0,0,0.7), transparent);
+}
+
+.navbar{
+    width: 100%;
+    height: 60px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .logo{
-    font-size: 24px;
+    font-size: 30px;
     text-transform: uppercase;
     letter-spacing: 4px;
     font-family: "Share Tech";
     color: #fffdeb;
+    margin-left: 50px;
 }
 
 .logo span{
     color: #ffe500;
 }
 
-html{
-    scroll-behavior: smooth;
-}
-
-nav{
+.navbar .links{
     display: flex;
-    font-size: 20px;
-    justify-content: space-around;
-    align-items: center;
-    width: 100%;
-    position: fixed;
-    background: linear-gradient(rgba(0,0,0,0.7), transparent);
-    text-align: center;
-    flex-wrap: wrap;
+    gap: 2rem;
+    margin-right: 50px;
+    font-size: 20px;  
 }
 
-nav ul li{
-    display: inline-block;
-}
-
-nav ul li a{
-    text-decoration: none;
-    padding: 5px 0;
-    display: inline-block;
-    margin: 15px 10px;
-    color: white;
-    font-weight: 700;
-    text-transform: uppercase;
-    border-bottom: 3px solid transparent;
-    transition: all 0.25s ease-in-out;
-}
-
-nav ul li a:hover{
-    border-bottom: 3px solid white;
-}
-
-.nav-list{
-    list-style: none;
-    display: flex;
-}
-
-.mobile-menu{
+.navbar .toggle_btn{
+    color: #fffdeb;
+    font-size: 1.5rem;
     cursor: pointer;
     display: none;
 }
 
-.mobile-menu div{
-    width: 32px;
-    height: 2px;
-    background: #ffff;
-    margin: 8px;
+/*DROPDOWN MENU*/
+.dropdown_menu{
+    display: none;
+    position: absolute;
+    right: 2rem;
+    top: 60px;
+    height: 0;
+    width: 300px;
+    background: rgba(225, 225, 225, 0.1);
+    backdrop-filter: blur(15px);
+    border-radius: 10px;
+    overflow: hidden;
+    transition: height 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275) ;
 }
 
+.dropdown_menu li{
+    padding: 0.7rem;
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+}
+
+.dropdown_menu.open{
+    height: 240px;
+}
+
+
+/*Sections*/
 
 section{
     width: 100%;
@@ -83,12 +109,6 @@ section{
     background-position: center;
 }
 
-
-
-
-section:nth-of-type(1){
-    background-image: url("../css/images/meblack.png");
-}
 section:nth-of-type(2){
     background-color: #262626;
 }
@@ -103,6 +123,12 @@ section:nth-of-type(5){
 }
 section:nth-of-type(6){
     background-color: #ffe500;
+}
+
+.section1{
+    background-image: url(/css/images/meblack.png);
+    background-position: center;
+    background-size: cover;
 }
 
 .title-contact{
@@ -195,6 +221,7 @@ section:nth-of-type(6){
     padding: 5px;
 }
 
+/* About me */
 .section2{
     padding: 100px 0px;
 }
@@ -258,6 +285,14 @@ section:nth-of-type(6){
     transition: .4s;
 }
 
+.button a{
+    color: #191919;
+}
+
+.button a:hover{
+    color: #ffe500;
+}
+
 .button:hover{
     background-color: transparent;
     border: 2px solid #ffe500;
@@ -265,6 +300,8 @@ section:nth-of-type(6){
     color: white;
 
 }
+
+/* services(skils */
 
 .more-about-me{
     margin-top: 15px;
@@ -336,7 +373,7 @@ section:nth-of-type(6){
     margin-top: 18px;
 }
 
-
+/* Projects*/
 
 .section-projects{
     align-items: center;
@@ -356,6 +393,7 @@ section:nth-of-type(6){
     font-size: 200px;
 }
 
+/* Testimonials*/
 .top-section{
     padding: 70px 0;
 }
@@ -439,7 +477,7 @@ section:nth-of-type(6){
 }
 
 
-
+/* Contact*/
 .contact-subtitle{
     font-weight: bold;
 }
@@ -461,8 +499,18 @@ section:nth-of-type(6){
 }
 
 
-
-@media screen and (max-width: 600px) {
+/* Responsive code desing */
+@media screen and (max-width: 979px) {
+    .navbar .links{
+        display: none;
+    }
+    .navbar .toggle_btn{
+        display: block;
+        margin-right: 18px;
+    }
+    .dropdown_menu{
+        display: block;
+    }
     .main-about{
         align-items: center;
         text-align: center;
@@ -485,19 +533,32 @@ section:nth-of-type(6){
         text-align: center;
     }
     
+    .nav-list a{
+        flex-wrap: wrap;
+
+    }
     .nav-list li{
         flex-direction: column;
         text-align: center;
-        font-size: 10px;
+        font-size: 18px;
     }
-  
     .container-text{
-    padding: 340px 0 0 30px;
+        padding: 340px 0 0 30px;
     }
-  
+
     .title-services h2{
-    font-size: 50px;
+        font-size: 70px;
+    }
+
+    .section1{
+        background-image: url(/css/images/1700x700.png);
+    
+    }
 }
-  
-  
+@media screen and (max-width: 576px){
+    .dropdown_menu{
+        left: 2rem;
+        width: unset;
+    }
+
 }
